--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <h1 class="fn">Chandima Fernando</h1>
         
             <p>
-                Cell: <span class="tel">555-666-7777</span><br />
-                Email: <a class="email" href="mailto:greatoldone@lovecraft.com">greatoldone@lovecraft.com</a>
+                LinkedIn: <a href="https://www.linkedin.com/in/chandimafernando/">https://www.linkedin.com/in/chandimafernando/</a><br />
+                Email: <span>wfernando at huskers dot unl dot edu</span>
             </p>
         </div>
                 
