--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 
         <div id="objective">
             <p>
-                I am a doctoral student in the Department of Computer Science and Engineering at the University of Nebraska-Lincoln. 
+                I am a doctoral candidate in the Department of Computer Science and Engineering at the University of Nebraska-Lincoln. 
                 I work as a research assistant in <a href="https://nimbus.unl.edu/people/">NIMBUS Lab</a> under the supervision of Dr. Carrick Detweiler and Dr. Justin Bradley. 
                  My research focus includes distributed control, consensus algorithms, co-regulation techniques, and multi-agent system. 
             </p>
