--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>
                 I am a doctoral candidate in the Department of Computer Science and Engineering at the University of Nebraska-Lincoln. 
                 I work as a research assistant in <a href="https://nimbus.unl.edu/people/">NIMBUS Lab</a> under the supervision of Dr. Carrick Detweiler and Dr. Justin Bradley. 
-                 My research focus includes distributed control, consensus algorithms, co-regulation techniques, and multi-agent system. 
+                 My research focus includes distributed control, consensus algorithms, co-regulation techniques, reinforcement learning for UASs and multi-agent system. 
             </p>
              
              <p>
