Update bnl email

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <p>
                 LinkedIn: <a href="https://www.linkedin.com/in/chandimafernando/">https://www.linkedin.com/in/chandimafernando/</a><br />
                 Email: <span>wfernando at huskers dot unl dot edu</span>
+                Email: <span>wfernando1 at bnl dot gov</span>
             </p>
         </div>
                 
