add: swarm sim image updated cv

--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
           reinforcement learning-based linear quadratic integral controller on a
           swarm of quad-copters.
         </p>
+        <img
+        src="images/swarm_sims_3grp_8ag.png"
+        width="100%"
+        height="600px"
+        alt="co-regulation"
+      />
       </div>
 
       <script>
