fix: padding + image error

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
       </section>
 
       <section class="section contact-me" data-section="section4">
-        <div class="container" style="padding-bottom: 2000px;">
-          <div class="section-heading">
+        <div class="container">
+          <div class="section-heading" style="padding-bottom: 600px;">
             <h2>Contact Me</h2>
             <div class="line-dec"></div>
             <span>
