--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <br />
               <p>
                 Please find my CV
-                <a href="CV_Fernando_02122024.pdf" target="_blank">here</a>.
+                <a href="CV_Fernando_11062024.pdf" target="_blank">here</a>.
               </p>
             </span>
           </div>
@@ -112,6 +112,14 @@
                   and Bluesky to integrate the designed controllers into the
                   existing scientific experimental workflow at NSLS-II.
                 </p>
+                <div class="white-button">
+                  <a
+                    href="https://ieeexplore.ieee.org/abstract/document/10611706"
+                    target="_blank"
+                    >Read @IEEE</a
+                  >
+                </div>
+                
                 <!-- <div class="white-button">
                   <a href="#">Read More</a>
                 </div> -->
