--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -112,6 +113,13 @@
                   and Bluesky to integrate the designed controllers into the
                   existing scientific experimental workflow at NSLS-II.
                 </p>
+                <p>
+                  C. Fernando, C. Detweiler, and J. Bradley, "Co-regulated
+                  information consensus with delays for multi-agent uas," in
+                  <i>2020 59th IEEE Conference on Decision and Control (CDC)</i
+                  >. IEEE, 2020, pp. 180-187
+                  Fernando, C., Olds, D., Campbell, S.I. and Maffettone, P.M., 2024, May. Facile Integration of Robots into Experimental Orchestration at Scientific User Facilities. In <i>2024 IEEE International Conference on Robotics and Automation (ICRA)</i> (pp. 9578-9584). IEEE.
+                </p>
                 <div class="white-button">
                   <a
                     href="https://ieeexplore.ieee.org/abstract/document/10611706"
@@ -221,6 +229,36 @@
             </div>
           </div>
         </div>
+
+        <div class="right-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-text">
+                <h4>Co-regulation-based Consensus</h4>
+                <p>
+                  Proposed a novel algorithm for
+                  consensus enabled active learning that drastically reduces the computational demand whilst
+                  increasing the overall model accuracy. Once each of the UAS obtains a labeled subset of images
+                  through active learning, we update the weights of the model for three epochs only on the new
+                  images to reduce the computational cost, allowing for an increased operational time. The group
+                  of UAS communicates the model weights instead of the raw data and then leverages consensus
+                  to agree on updated weights. The consensus step mitigates the impact on weights caused by
+                  the updates and generalizes the knowledge of each individual UAS to the whole system, which
+                  results in increased model accuracy.
+                </p>
+
+
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-image">
+                <img src="images/cal_arch.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </section>
 
       <section class="section teaching" data-section="section3">
