--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="left-text">
-                <h4>Co-regulation-based Consensus</h4>
+                <h4>Consensus Enabled Active-Learning</h4>
                 <p>
                   Proposed a novel algorithm for
                   consensus enabled active learning that drastically reduces the computational demand whilst
@@ -366,7 +366,7 @@
         });
       };
 
-      $(".main-menu").on("click", "a", function (e) {
+      $(".main-menu").on("mouseover", "a", function (e) {
         e.preventDefault();
         showSection($(this).attr("href"), true);
       });
