--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
             <div class="col-md-6">
               <div class="right-image">
-                <img src="images/cal_arch.png" alt="" />
+                <img src="images/cal_arch.jpeg" alt="" />
               </div>
             </div>
           </div>
