--- a/index.html
+++ b/index.html
@@ -245,13 +245,11 @@
                   the updates and generalizes the knowledge of each individual UAS to the whole system, which
                   results in increased model accuracy.
                 </p>
-
-
               </div>
             </div>
             <div class="col-md-6">
               <div class="right-image">
-                <img src="images/cal_arch.jpeg" alt="" />
+                <img src="images/cal_arch.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -366,7 +364,7 @@
         });
       };
 
-      $(".main-menu").on("onclick", "a", function (e) {
+      $(".main-menu").on("click", "a", function (e) {
         e.preventDefault();
         showSection($(this).attr("href"), true);
       });
